Fix Stripe checkout button

--- a/blutdruck-test-merged.html
+++ b/blutdruck-test-merged.html
@@ -683,11 +683,12 @@
             >
               Mehr zu Klarna Zahlungsoptionen →
             </a>
-            <button
-              class="mt-auto w-full py-2 bg-green-500 hover:bg-green-600 text-white rounded-xl transition duration-300"
+            <a
+              href="javascript:void(0)"
+              class="mt-auto w-full py-2 bg-green-500 hover:bg-green-600 text-white rounded-xl transition duration-300 block text-center checkout-button"
             >
               Jetzt Angebot sichern
-            </button>
+            </a>
           </div>
 
           <!-- Angebot 2 -->
