--- a/index.html
+++ b/index.html
@@ -2173,16 +2173,17 @@
               gewährleisten.
             </p>
             <a
-              href="klarna-payment-info.html"
               class="text-blue-600 hover:underline text-sm block mb-4"
+              href="/klarna-payment-info"
             >
               Mehr zu Klarna Zahlungsoptionen →
             </a>
-            <button
-              class="mt-auto w-full py-2 bg-green-500 hover:bg-green-600 text-white rounded-xl transition duration-300"
+            <a
+              href="javascript:void(0)"
+              class="mt-auto w-full py-2 bg-green-500 hover:bg-green-600 text-white rounded-xl transition duration-300 block text-center checkout-button"
             >
               Jetzt Angebot sichern
-            </button>
+            </a>
           </div>
 
           <!-- Angebot 2 -->
@@ -2265,8 +2266,8 @@
               haben oder sich nicht qualifiziert haben.
             </p>
             <a
-              href="klarna-payment-info.html"
               class="text-blue-600 hover:underline text-sm block mb-4"
+              href="/klarna-payment-info"
             >
               Mehr zu Klarna Zahlungsoptionen →
             </a>
@@ -2358,8 +2359,8 @@
             </p>
 
             <a
-              href="klarna-payment-info.html"
               class="text-blue-600 hover:underline text-sm block mb-4"
+              href="/klarna-payment-info"
             >
               Mehr zu Klarna Zahlungsoptionen →
             </a>
