Update Stripe Price ID

--- a/blutdruck-test-merged.html
+++ b/blutdruck-test-merged.html
@@ -1283,7 +1283,7 @@
               'Content-Type': 'application/json',
             },
             body: JSON.stringify({
-              priceId: 'price_1QyfHoA9aibyk7ocoy9gcOsX', // Using the live mode price ID
+              priceId: 'price_1RI4RCA9aibyk7oc22okGK2W', // Updated Price ID
             }),
           });
 
