Update ecommerce test files

--- a/blutdruck-test-merged.html
+++ b/blutdruck-test-merged.html
@@ -669,7 +669,7 @@
               </li>
             </ul>
             <div class="mb-4 text-sm text-gray-500 font-semibold">
-              sofort lieferbar
+              ab Juni 2025 lieferbar
             </div>
             <p class="text-sm text-gray-600 mb-4">
               Dieses Angebot ist einzigartig und begrenzt – perfekt für den, der
