feat: Add order ID metadata to Stripe checkout and generate unique ID on frontend

--- a/blutdruck-analyse.html
+++ b/blutdruck-analyse.html
@@ -575,6 +575,10 @@
               ? 'http://localhost:3002/create-checkout-session'
               : '/api/create-checkout';
 
+          // Generate a unique Order ID
+          const uniqueOrderId = crypto.randomUUID();
+          console.log('Generated Order ID:', uniqueOrderId);
+
           // Call your backend to create a Checkout Session
           const response = await fetch(endpointUrl, {
             method: 'POST',
@@ -583,6 +587,7 @@
             },
             body: JSON.stringify({
               priceId: 'price_1QyfHoA9aibyk7ocoy9gcOsX', // Using the live mode price ID
+              orderId: uniqueOrderId, // Add the unique order ID here
             }),
           });
 
