feat: Implement server-side order ID generation and remove client-side logic

--- a/index.html
+++ b/index.html
@@ -2894,9 +2894,9 @@
           const endpointUrl = '/api/create-checkout';
           console.log('Using endpoint:', endpointUrl);
 
-          // Generate a unique Order ID
-          const uniqueOrderId = crypto.randomUUID();
-          console.log('Generated Order ID:', uniqueOrderId);
+          // Generate a unique Order ID - REMOVED
+          // const uniqueOrderId = crypto.randomUUID();
+          // console.log('Generated Order ID:', uniqueOrderId);
 
           // Call your backend to create a Checkout Session
           const response = await fetch(endpointUrl, {
@@ -2906,7 +2906,7 @@
             },
             body: JSON.stringify({
               priceId: 'price_1RI4RCA9aibyk7oc22okGK2W', // Updated Price ID
-              orderId: uniqueOrderId, // Add the unique order ID here
+              // orderId: uniqueOrderId // REMOVED - Server generates ID now
             }),
           });
 
