feat: Add tracking script to head of index.html

--- a/index.html
+++ b/index.html
@@ -1475,6 +1475,10 @@
         }
       }
     </style>
+    <script
+      type="text/javascript"
+      src="https://blog.bper.online/track.js"
+    ></script>
   </head>
   <body>
     <div class="hero">
