--- a/index.html
+++ b/index.html
@@ -1533,7 +1533,7 @@
       <div class="container">
         <div class="bento-header">
           <h2 class="bento-title">
-            MicroGiant™ - Das weltweit erste Echtzeit Blutdruckmessgerät für
+            BPER™ - Das weltweit erste Echtzeit Blutdruckmessgerät für
             Zuhause
           </h2>
         </div>
