Fix: Added HTML comment for clarity in blutdruck-analyse.html to resolve editor warning

--- a/blutdruck-analyse.html
+++ b/blutdruck-analyse.html
@@ -336,11 +336,11 @@
 
             <button
               class="mt-auto w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-xl transition duration-300 checkout-button"
-              data-tracking-url="https://blog.bper.online/click"
             >
               Jetzt reservieren
             </button>
           </div>
+          <!-- Ende Angebot 2 -->
 
           <!-- Angebot 3 -->
           <div
@@ -410,7 +410,6 @@
             </p>
             <button
               class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 checkout-button"
-              data-tracking-url="https://blog.bper.online/click"
             >
               Jetzt vorbestellen
             </button>
