--- a/index.html
+++ b/index.html
@@ -1511,7 +1511,7 @@
             </h1>
           </div>
           <div class="hero-buttons">
-            <a href="https://blog.bper.online/click" class="btn btn-primary">
+            <a href="https://blog.heavyrun.de/click" class="btn btn-primary">
               Starte deine Analyse
               <span class="icon">→</span>
             </a>
@@ -1533,8 +1533,7 @@
       <div class="container">
         <div class="bento-header">
           <h2 class="bento-title">
-            BPER™ - Das weltweit erste Echtzeit Blutdruckmessgerät für
-            Zuhause
+            BPER™ - Das weltweit erste Echtzeit Blutdruckmessgerät für Zuhause
           </h2>
         </div>
 
@@ -1738,7 +1737,7 @@
           </p>
           <div class="hero-buttons mt-16">
             <a
-              href="https://blog.bper.online/click"
+              href="https://blog.heavyrun.de/click"
               class="btn btn-primary dark-mode bg-transparent text-white border border-white hover:bg-white hover:text-gray-900 transition-colors"
             >
               Teste jetzt deinen Bedarf
