Fix: Replace absolute file paths with relative paths for Netlify compatibility

--- a/index.html
+++ b/index.html
@@ -1511,7 +1511,7 @@
             </h1>
           </div>
           <div class="hero-buttons">
-            <a href="https://blog.heavyrun.de/click" class="btn btn-primary">
+            <a href="./blutdruck-test-merged.html" class="btn btn-primary">
               Starte deine Analyse
               <span class="icon">→</span>
             </a>
@@ -1737,7 +1737,7 @@
           </p>
           <div class="hero-buttons mt-16">
             <a
-              href="https://blog.heavyrun.de/click"
+              href="./blutdruck-test-merged.html"
               class="btn btn-primary dark-mode bg-transparent text-white border border-white hover:bg-white hover:text-gray-900 transition-colors"
             >
               Teste jetzt deinen Bedarf
